# gfmodules-ia-stub

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  sonar-project.properties  vite.config.js
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yaml  release-package-venv.yaml  release-package.yaml
LICENSES/: LicenseRef-Logius.txt
app/: application.py  bindings.py  config.py  main.py  module.py  schemas.py  utils.py
app/config/: schemas.py  services.py
app/docs/: router.py
app/providers/: digid_mock_provider.py
app/routers/: default.py  health.py
app/services/encryption/: declaration_jwt_service.py  envelope_jwt_service.py  rsa_jwe_service.py
app/userinfo/: bindings.py  services.py
docker/: Dockerfile
jinja2/: digid_mock.html  exception.html  layout.html
saml/templates/html/: authn_request.html
static/img/: digid-logo.svg.license
tests/: test_example.py
